# ReCoDE_Lattice_Hamiltonian

./: .gitignore  .pre-commit-config.yaml  404.html  A1_EnergyDependentRecombinationRates.md  Lattice.py  LatticePlots.py  README.md  Recombination.py  Redfield.py  RunLattice.py  Untitled.ipynb  WorkedExample.ipynb  index.html  mkdocs.yml  pyproject.toml
01_ModelDescription/: index.html
02_FindingSteadyStatePopulations/: index.html
03_CalculatingEigenstateProperties/: index.html
04_OverviewOfCode/: index.html
05-WorkedExample/: index.html
06_SpeedingUp-for-Loops/: index.html
07-Using-multiprocessing/: index.html
08_Using-seaborn/: index.html
A1_EnergyDependentRecombinationRates/: index.html
A2_SpectralDensityFunctional/: index.html
A3-SpeedingUp-for-Loops-ExampleCode/: index.html
docs/: 01_ModelDescription.md  02_FindingSteadyStatePopulations.md  03_CalculatingEigenstateProperties.md  04_OverviewOfCode.md  05_Using-seaborn.md  06_SpeedingUp-for-Loops.md  07_Using-multiprocessing.md  08_Using-seaborn.md  A1_EnergyDependentRecombinationRates.md  A2_SpectralDensityFunctional.md  ModelDescription.ipynb  ModelDescription.md  ModelDescription2.md
lattice_hamiltonian/: Lattice.py  LatticePlots.py  Redfield.py  RunLattice.py  lattice.py  lattice_plots.py  recombination.py  redfield.py  run_lattice.py
naive_correlation_function/: index.html
notebooks/: 05-WorkedExample.ipynb  05_WorkedExample.ipynb  07-Using-multiprocessing.ipynb  07_Using-multiprocessing.ipynb  A3-SpeedingUp-for-Loops-ExampleCode.ipynb  A3_SpeedingUp-for-Loops-ExampleCode.ipynb  (+3 more)
(+1 files in other folders)
