[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ReCoDe-Lattice-Hamiltonian"
version = "1.0"
authors = [
    { name = "Lucy Hart", email = "lucy.hart18@imperial.ac.uk" },
    { name = "Chris Cooling", email = "c.cooling10@imperial.ac.uk" },
    { name = "Diego Alonso Ãlvarez", email = "d.alonso-alvarez@imperial.ac.uk" },
]
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "pandas",
    "seaborn",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
]

doc = [
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python>=1.11",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "markdown-include",
    "mkdocs-glightbox",
    "mkdocs-caption",
]

[tool.ruff]
target-version = "py311"
lint.select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
lint.pydocstyle.convention = "google"

[tool.mypy]
# Some of the docs scripts give errors, but we don't care
exclude = "docs"
ignore_missing_imports = true
